# geomlib

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/geomlib/: __init__.py  circle.py  constants.py  line.py  point.py  polygon.py  segment.py  triangle.py  utils.py  vector.py
src/geomlib/morph/: __init__.py  base.py  composite.py  homothety.py  reflection.py  rotation.py  translation.py
