[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geomlib"
version = "0.2.2"
description = "A computational geometry library for Python"
readme = "README.md"
authors = [{name="Victor Phung"}]
license = {text = "MIT"}
requires-python = ">=3.11"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.25",
]

[project.urls]
Homepage = "https://github.com/littleduckcoding/geomlib"
Repository = "https://github.com/littleduckcoding/geomlib"
Issues = "https://github.com/littleduckcoding/geomlib/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]